# aws-ml-server-template

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.cache/matplotlib/: fontlist-v330.json
.github/workflows/: docker-images.yml  ecr-image.yml
api/: cli.py  settings.py
api/utils/: log.py
app/: Home.py  cli.py  constants.py  main.py  settings.py
app/cli/: api.py  ml.py
app/ml/: Home.py
app/ml/pages/: 1_Language_Detector.py  2_Chat-GPT.py  2_Mapping_Demo.py  3_DataFrame_Demo.py  3_US_Counties.py  4_Linear_Regression.py
app/pages/: 1_Query_Bot.py  2_Chat_Bot.py  3_Plotting_Demo.py  3_US_Counties.py  5_Animation_Demo.py
app/router/: endpoints.py  status_routes.py  v1_router.py
app/utils/: data_query_chain.py  duckdb_agent.py  duckdb_loader.py  duckdb_query.py  duckdb_tool.py  log.py
ml/: Home.py
ml/pages/: 1_Language_Detector.py  2_Chat-GPT.py  4_Linear_Regression.py
scripts/: build_dev_image.sh  build_prd_image.sh  entrypoint.sh  install.sh  setup_venv.sh  upgrade.sh
workspace/: config.py  settings.py
workspace/dev/: aws_config.py  docker_config.py
workspace/dev/jupyter/: docker_resources.py
workspace/example_secrets/: app_secrets.yml  dev_jupyter_secrets.yml  prd_jupyter_secrets.yml  prd_postgres_secrets.yml
workspace/prd/: aws_config.py  docker_config.py
